$Rev$
[2008/04/09]
mFileNew.py         Can remember the last new file type(select new type menu first), 
                    then when you select new menu, it'll use the last new file type as default
PrefDialog.py mInputAssistant.py
                    Improve preference dialog input assistant checkbox process. 
                    When you check the first checkbox(Enable input assistant) it'll
                    automatically toggle other 5 checkboxes.

[2008/04/03]
SyntaxCheck.py      Fix exception process bug

[2008/03/31]
mLineending.py      Add line ending mixture check when saving file feature
FindReplace.py      Add search text count

[2008/03/27]
EditorFactory.py    Chanage left double click to right double click
common.py makemenu.py
                    Change setmenutext to use fix width to set the menu text, replace with '\t'
[2008/03/22]
web2py_plugin       Add web2py plugin

[2008/03/17]
HtmlPage.py mRestFileType.py Del acp/rst
                    Improve ReST document render, and fix the setfocus lost bug when
                    auto modified the html output, thanks a lot to ygao
                    
[2008/03/15]
mPyRun.py           Add auto detect python interpreter in windows platform

[2008/03/13]
mScript.py          Fix script filename cannot be unicode(chinese) bug

[2008/03/04]
*                   Enhance on_modified process, improve the edit speed
mShell.py           Strip leading space when doing "Run in Shell"
mAutoCheck.py       Chanage auto file check to Editor on_set_focus event
SvnSettings.py      Fix password widget it Text bug, changed to Password
mFileNew.py         Fix template line-ending not match the default line-ending setting

[2008/03/03]
Editor.py mFormat.py mLineending.py
                    Fix press tab and convert EOF too slow problem

[2008/03/02]
EditorFactory.py FlatNotebook.py
                    Fix tab invisible bug after changing size or changing the page title